--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: calculator
+name: flulator
 description: Just a simple Flutter front end.
 
 # The following line prevents the package from being accidentally published to
@@ -30,10 +30,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
   math_expressions: ^2.2.0
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "asset/logo.jpg"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
