--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ir.blackiq.flulator.calculator">
-   <application
+    <uses-permission android:name="android.permission.INTERNET" />
+    <application
         android:label="Flulator"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -37,5 +38,5 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-    </application>
+   </application>
 </manifest>
