--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_fonts: ^2.1.0
   math_expressions: ^2.2.0
   flutter_launcher_icons: ^0.9.2
+  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
   flutter_test:
